--- a/less/style.less
+++ b/less/style.less
@@ -1,26 +1,34 @@
-@import "../components/normalize.css/normalize.css";
+// LessHat
 @import "../components/lesshat/build/lesshat-prefixed.less";
+
+// Bootstrap
 @import "../components/bootstrap/less/mixins/image.less";
+// Core variables and mixins
+@import "../components/bootstrap/less/variables.less";
+@import "../components/bootstrap/less/mixins.less";
+
+// Reset and dependencies
+@import "../components/bootstrap/less/normalize.less";
+@import "../components/bootstrap/less/print.less";
+
+// Core CSS
+@import "../components/bootstrap/less/scaffolding.less";
+@import "../components/bootstrap/less/type.less";
+@import "../components/bootstrap/less/grid.less";
+@import "../components/bootstrap/less/buttons.less";
+
+// Utility classes
+@import "../components/bootstrap/less/utilities.less";
+@import "../components/bootstrap/less/responsive-utilities.less";
+
 
 @primary-color: #93c8ea;
 @secondary-color: #f26b6a;
 @background-color: #f4fbfe;
 @shadow-color: #d6e9f3;
 
-@screen-xs: 480px;
-@screen-xs-min: @screen-xs;
-@screen-xs-max: (@screen-sm-min - 1);
-@screen-sm: 768px;
-@screen-sm-min: @screen-sm;
-@screen-sm-max: (@screen-md-min - 1);
-@screen-md: 992px;
-@screen-md-min: @screen-md;
-@screen-md-max: (@screen-lg-min - 1);
-@screen-lg: 1200px;
-@screen-lg-min: @screen-lg;
-
-@title-font: "Arial Black";
-@title-font-lite: "Tahoma";
+@title-font: "Open Sans";
+@title-font-lite: "Lato";
 
 body {
   background: @background-color;
@@ -31,7 +39,8 @@ body {
   width: 221px;
   height: 41px;
   text-indent: -2560px;
-  .img-retina('../img/softbinator.png', '../img/softbinator@2x.png', 221px, 41px);
+  outline: 0;
+  .img-retina("../img/softbinator.png", "../img/softbinator@2x.png", 221px, 41px);
 }
 
 .primary-color {
@@ -53,7 +62,7 @@ body {
     color: #fff;
     background: @secondary-color;
     border: 0;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 24px;
     line-height: 1.6;
     text-transform: uppercase;
@@ -156,6 +165,7 @@ body {
     text-transform: uppercase;
     margin: 10px 0 6px 0;
     font-family: @title-font;
+    font-weight: 600;
   }
 
   h2 {
@@ -164,6 +174,7 @@ body {
     font-size: 24px;
     margin: 0 0 6px;
     font-family: @title-font;
+    font-weight: 600;
   }
 }
 
@@ -215,6 +226,10 @@ body {
       }
     }
   }
+
+  &.primary h3 .secondary-color {
+    font-weight: 600;
+  }
 }
 
 .box {
@@ -231,4 +246,36 @@ body {
 #footer {
   font-size: 16px;
   font-style: italic;
+
+  .powered-by {
+    @sponsor-width: 120px;
+    @sponsor-height: 120px;
+
+    .sponsor {
+      display: inline-block;
+      width: @sponsor-height;
+      height: @sponsor-height;
+      line-height: @sponsor-height;
+      text-indent: -2560px;
+      outline: 0;
+
+      &.madrivo {
+        @sponsor-width: 375px;
+        width: @sponsor-width;
+        .img-retina("../img/madrivo.jpg", "../img/madrivo@2x.jpg", @sponsor-width, @sponsor-height);
+      }
+
+      &.geekwanted {
+        @sponsor-width: 453px;
+        width: @sponsor-width;
+        .img-retina("../img/geekwanted.jpg", "../img/geekwanted@2x.jpg", @sponsor-width, @sponsor-height)
+      }
+    }
+
+    .spacer {
+      font-family: @title-font-lite;
+      font-size: 48px;
+      padding: 0 24px;
+    }
+  }
 }
