--- a/less/style.less
+++ b/less/style.less
@@ -276,6 +276,7 @@ body {
       font-family: @title-font-lite;
       font-size: 48px;
       padding: 0 24px;
+      font-style: normal;
     }
   }
 }
