--- a/css/style.css
+++ b/css/style.css
@@ -2088,6 +2088,12 @@ body {
   margin: 80px 0;
   color: #fff;
 }
+@media (max-width: 767px) {
+  #ribbon {
+    width: 380px;
+    margin-left: -190px;
+  }
+}
 @media (min-width: 768px) {
   #ribbon {
     width: 668px;
@@ -2192,7 +2198,7 @@ body {
   font-weight: 100;
 }
 .half-ribbon h3 .lite-text.lg {
-  font-size: 48px;
+  font-size: 44px;
 }
 .half-ribbon.primary h3 .secondary-color {
   font-weight: 600;
@@ -2211,39 +2217,21 @@ body {
 }
 #footer {
   font-size: 16px;
-  font-style: italic;
 }
-#footer .powered-by .sponsor {
+#footer .powered-by {
+  text-align: center;
+  overflow: hidden;
+}
+#footer .powered-by .sponsor,
+#footer .powered-by .spacer {
   display: inline-block;
-  width: 120px;
-  height: 120px;
-  line-height: 120px;
-  text-indent: -2560px;
-  outline: 0;
-}
-#footer .powered-by .sponsor.madrivo {
-  width: 375px;
-  background-image: url("../img/madrivo.jpg");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-  #footer .powered-by .sponsor.madrivo {
-    background-image: url("../img/madrivo@2x.jpg");
-    background-size: 375px 120px;
-  }
-}
-#footer .powered-by .sponsor.geekwanted {
-  width: 453px;
-  background-image: url("../img/geekwanted.jpg");
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-  #footer .powered-by .sponsor.geekwanted {
-    background-image: url("../img/geekwanted@2x.jpg");
-    background-size: 453px 120px;
-  }
+  margin-right: 24px;
 }
 #footer .powered-by .spacer {
+  display: inline-block;
   font-family: "Lato";
   font-size: 48px;
-  padding: 0 24px;
+  padding: 24px 0;
   font-style: normal;
+  vertical-align: top;
 }
